Fix CI build errors (polling + supabase helpers)